k8s/infra/_namespace-loans.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: loans
  labels:
    istio-injection: enabled
