k8s/infra/kibana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: loans
  labels:
    app: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
        logtype: json
    spec:
      containers:
        - name: kibana
          image: docker.elastic.co/kibana/kibana:8.8.1
          resources:
            limits:
              cpu: 1000m
            requests:
              cpu: 100m
          ports:
            - containerPort: 5601

---

apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: loans
  labels:
    app: kibana
spec:
  selector:
    app: kibana
  ports:
    - name: http
      port: 5601
