k8s/infra/maildev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: loans
  name: maildev
  labels:
    app: maildev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: maildev
  template:
    metadata:
      labels:
        app: maildev
    spec:
      containers:
        - name: maildev
          image: maildev/maildev:latest
          ports:
            - name: http
              containerPort: 1080
              protocol: TCP
            - name: client
              containerPort: 1025
              protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  namespace: loans
  name: maildev
  labels:
    app: maildev
spec:
  type: NodePort
  selector:
    app: maildev
  ports:
    - name: http
      protocol: TCP
      port: 1080
      targetPort: http
    - name: client
      protocol: TCP
      port: 1025
      targetPort: client
