k8s/infra/mailhog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: loans
  name: mailhog
  labels:
    app: mailhog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailhog
  template:
    metadata:
      labels:
        app: mailhog
    spec:
      containers:
        - name: mailhog
          image: mailhog/mailhog:v1.0.1
          ports:
            - name: http
              containerPort: 8025
              protocol: TCP
            - name: client
              containerPort: 1025
              protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  namespace: loans
  name: mailhog
  labels:
    app: mailhog
spec:
  selector:
    app: mailhog
  ports:
    - name: http
      protocol: TCP
      port: 8025
      targetPort: http
    - name: tcp-mail
      protocol: TCP
      port: 1025
      targetPort: 1025
