k8s/infra/pgadmin.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: loans
  labels:
    app: pgadmin
  name: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
        - image: dpage/pgadmin4:7.5
          imagePullPolicy: Always
          name: pgadmin
          volumeMounts:
            - mountPath: /var/lib/pgadmin
              name: pgadmin-storage
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
      volumes:
        - name: pgadmin-storage
          persistentVolumeClaim:
            claimName: pgadmin-pv-claim

---

apiVersion: v1
kind: Service
metadata:
  namespace: loans
  name: pgadmin
  labels:
    app: pgadmin
spec:
  selector:
    app: pgadmin
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
