k8s/infra/redis-commander.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: loans
  name: redis-commander
  labels:
    app: redis-commander
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-commander
  template:
    metadata:
      labels:
        app: redis-commander
    spec:
      containers:
        - name: redis-commander
          image: rediscommander/redis-commander:latest
          ports:
            - containerPort: 8081

---

apiVersion: v1
kind: Service
metadata:
  namespace: loans
  name: redis-commander
  labels:
    app: redis-commander
spec:
  selector:
    app: redis-commander
  ports:
    - name: client
      port: 8081
