k8s/infra/vault.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: loans
  name: vault
  labels:
    app: vault
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vault
  template:
    metadata:
      labels:
        app: vault
    spec:
      containers:
        - name: vault
          image: hashicorp/vault:1.14.1
          ports:
            - containerPort: 8200

---

apiVersion: v1
kind: Service
metadata:
  namespace: loans
  name: vault
  labels:
    app: vault
spec:
  type: NodePort
  selector:
    app: vault
  ports:
    - name: http
      port: 8200
