k8s/infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: osber-ingress
  namespace: loans
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: osber.io
      http:
        paths:
          - path: /loans(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: back-office
                port:
                  number: 8080
